--- a/src/components/projects.module.css
+++ b/src/components/projects.module.css
@@ -8,11 +8,11 @@ background-size: cover;
 display: flex;
 align-items: center;
 flex-direction: column;
-padding: 40px 0 40px 0;
-padding-bottom: 150px;
+padding: 60px 0 40px 0;
 }
 
 .projectsWrapper h1 {
+  margin: 0;
   position: relative;
   bottom: 20px;
   font-size: 3rem;
